# OpenOrch

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  codeql.yml  lint-fix.yml
apps/api/: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_add_active_llm_id_to_organizations.py  0002_add_model_name_to_llm.py  0003_add_trace_url_to_test_run.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: auth.py  health.py
apps/api/app/api/v1/endpoints/authenticated/: llms.py  organizations.py  test_cases.py  test_groups.py  test_runs.py  users.py
apps/api/app/api/v1/endpoints/internal/: test_runs.py
apps/api/app/core/: config.py  database.py  rabbitmq.py  security.py
apps/api/app/models/: __init__.py  base.py  common.py  llm.py  organization.py  otp.py  team.py  test_case.py  test_group.py  test_group_run.py  test_run.py  types.py  user.py  user_organization.py
apps/api/app/repositories/: base.py  llm_repository.py  organization_repository.py  otp_repository.py  team_repository.py  test_case_repository.py  test_group_repository.py  test_group_run_repository.py  test_run_repository.py  user_organization_repository.py  user_repository.py
apps/api/app/schemas/: auth.py  llm.py  organization.py  team.py  test_case.py  test_group.py  test_group_run.py  test_run.py  user.py
apps/api/app/services/: auth_service.py  email_service.py  llm_service.py  organization_service.py  team_service.py  test_case_service.py  test_group_run_service.py  test_group_service.py  test_run_service.py  user_service.py
apps/api/consumer/: __init__.py  agent.py  be_client.py  config.py  executor.py  main.py  mcp_client.py  playwright_service.py  storage.py  worker.py
apps/api/consumer/llm_adapters/: __init__.py  anthropic_adapter.py  base.py  cohere_adapter.py  factory.py  google_adapter.py  meta_adapter.py  mistral_adapter.py  open_router_adapter.py  openai_adapter.py
apps/api/scripts/: create_db.py
apps/api/shared/llm/: __init__.py  client.py  types.py
apps/api/tests/: README.md  conftest.py  test_config.py
apps/api/tests/consumer/: conftest.py  test_agent.py  test_executor.py  test_llm_adapters.py  test_pipeline.py  test_playwright_service.py  test_storage.py  test_worker.py
apps/api/tests/repositories/: test_organization_repository.py  test_user_repository.py
apps/api/tests/routes/: test_auth.py  test_health.py
apps/api/tests/routes/authenticated/: conftest.py  test_organizations.py  test_test_cases.py  test_test_groups.py  test_test_runs.py  test_users.py
apps/api/tests/services/: test_organization_service.py  test_user_service.py
apps/web/: .env.example  .eslintrc.json  .gitignore  openapi.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/public/: .gitkeep
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/dashboard/: page.tsx
apps/web/src/app/(app)/group-runs/[id]/: page.tsx
apps/web/src/app/(app)/llms/: page.tsx
apps/web/src/app/(app)/onboarding/: page.tsx
apps/web/src/app/(app)/runs/[id]/: page.tsx
apps/web/src/app/(app)/settings/: page.tsx
apps/web/src/app/(app)/test-groups/: page.tsx
apps/web/src/app/(app)/test-groups/[id]/: page.tsx
apps/web/src/app/(app)/test-groups/[id]/test-cases/[caseId]/: page.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/signup/: page.tsx
apps/web/src/app/(marketing)/: layout.tsx  page.tsx
apps/web/src/components/: step-builder.tsx
apps/web/src/components/layout/: footer.tsx  header.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  confirm-dialog.tsx  container.tsx  empty-state.tsx  input.tsx  modal.tsx  page-header.tsx  spinner.tsx  typography.tsx  video-player.tsx
apps/web/src/config/: env.ts
apps/web/src/features/api-keys/: .gitkeep
apps/web/src/features/auth/components/: .gitkeep
apps/web/src/features/auth/services/: auth.service.ts
apps/web/src/features/auth/types/: .gitkeep  index.ts
apps/web/src/features/billing/: .gitkeep
apps/web/src/features/llms/services/: llm.service.ts
apps/web/src/features/llms/types/: index.ts
apps/web/src/features/teams/: .gitkeep
apps/web/src/features/test-cases/services/: test-case.service.ts
apps/web/src/features/test-cases/types/: index.ts
apps/web/src/features/test-groups/services/: test-group.service.ts
apps/web/src/features/test-groups/types/: index.ts
apps/web/src/features/test-runs/services/: test-run.service.ts
apps/web/src/features/test-runs/types/: index.ts
apps/web/src/features/usage-tracking/: .gitkeep
apps/web/src/features/users/services/: user.service.ts
apps/web/src/features/users/types/: index.ts
apps/web/src/hooks/: use-polling.ts
apps/web/src/lib/: api-client.ts  format.ts  status.ts  token.ts
apps/web/src/types/: rbac.ts
